# UTIME

./: .gitignore  CMakeLists.txt  FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTOR_REPORT.md  TESTING_GUIDE.md  UTIME.sln  UTIME.vcxproj  UTIME.vcxproj.filters  build_only.bat  debug_cycle.bat  force_unlock.bat  rebuild_all.bat
.qoder/quests/: input-method-candidate-optimization.md  input-method-code-refactor.md  input-method-cursor-fix.md
include/: CandidateWindow.h  Config.h  DictionaryEngine.h  EditSession.h  GetTextExtEditSession.h  Globals.h  TextService.h
scripts/: build_dict.py
src/: CandidateWindow.cpp  DictionaryEngine.cpp  EditSession.cpp  Register.cpp  TextService.cpp  UTIME.def  dllmain.cpp  utime.db
tools/: DBCheck.cpp  RegTest.cpp  build_dict_manual.bat  check_status.ps1  run_dbcheck.bat
tools/DictBuilder/: DictBuilder.vcxproj  main.cpp
